@@ -979,6 +979,10 @@ static const char help_text[] = MSGTR_Help;
 #define MSGTR_GUI_RearLeft "Hinten links"
 #define MSGTR_GUI_RearRight "Hinten rechts"
 #define MSGTR_GUI_Remove "Entfernen"
+#define MSGTR_GUI_Rotation "Drehung"
+#define MSGTR_GUI_Rotation180 "180°"
+#define MSGTR_GUI_Rotation90CCW "90° gegen den Uhrzeigersinn"
+#define MSGTR_GUI_Rotation90CW "90° im Uhrzeigersinn"
 #define MSGTR_GUI_Saturation "Sättigung"
 #define MSGTR_GUI_SaveWindowPositions "Fensterpositionen speichern"
 #define MSGTR_GUI_ScaleMode "Skalierung"
